--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "vite": "^6.0.11"
     },
     "dependencies": {
+        "chart.js": "^4.4.8",
         "sweetalert2": "^11.17.2"
     }
 }
