--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     },
     "dependencies": {
         "chart.js": "^4.4.8",
+        "puppeteer": "^24.10.0",
         "sweetalert2": "^11.17.2"
     }
 }
