--- a/.github/workflows/deploy-main.yaml
+++ b/.github/workflows/deploy-main.yaml
@@ -51,4 +51,4 @@ jobs:
         server-dir: ./${{ vars.live_ftp_sever_dir }}/
 
     - name: Check website status
-      run: curl -I http://${{ vars.live_url }}/
+      run: curl -I http://${{ vars.live_app_url }}/
