update deploy-main.yaml and TenancyServiceProvider.php

--- a/.github/workflows/deploy-main.yaml
+++ b/.github/workflows/deploy-main.yaml
@@ -42,6 +42,9 @@ jobs:
     - name: Delete cache
       run: rm -rf /bootstrap/cache/*
 
+    - name: Run Queue
+      run: php artisan queue:work
+
     - name: Sync files
       uses: SamKirkland/FTP-Deploy-Action@v4.3.5
       with:
