ci: update deploy-main.yaml

--- a/.github/workflows/deploy-main.yaml
+++ b/.github/workflows/deploy-main.yaml
@@ -43,7 +43,7 @@ jobs:
       run: rm -rf /bootstrap/cache/*
 
     - name: Run Queue
-      run: php artisan queue:work
+      run: php artisan queue:listen
 
     - name: Sync files
       uses: SamKirkland/FTP-Deploy-Action@v4.3.5
