--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.9",
         "spatie/browsershot": "^5.0",
+        "spatie/laravel-pdf": "^1.6",
         "stancl/tenancy": "^3.9"
     },
     "require-dev": {
