--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.9",
         "spatie/browsershot": "^5.0",
-        "stancl/tenancy": "^3.9"
+        "stancl/tenancy": "^3.9",
+        "stripe/stripe-php": "^17.3"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
