--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "barryvdh/laravel-dompdf": "^3.1",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.9",
+        "maatwebsite/excel": "^1.1",
         "spatie/browsershot": "^5.0",
         "stancl/tenancy": "^3.9",
         "stripe/stripe-php": "^17.3"
