--- a/composer.json
+++ b/composer.json
@@ -11,10 +11,11 @@
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.9",
         "maatwebsite/excel": "^1.1",
+        "nwidart/laravel-modules": "^12.0",
         "spatie/browsershot": "^5.0",
-        "stripe/stripe-php": "^17.3",
         "spatie/laravel-pdf": "^1.6",
-        "stancl/tenancy": "^3.9"
+        "stancl/tenancy": "^3.9",
+        "stripe/stripe-php": "^17.3"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
@@ -63,6 +64,11 @@
     "extra": {
         "laravel": {
             "dont-discover": []
+        },
+        "merge-plugin": {
+            "include": [
+                "Modules/*/composer.json"
+            ]
         }
     },
     "config": {
@@ -71,7 +77,8 @@
         "sort-packages": true,
         "allow-plugins": {
             "pestphp/pest-plugin": true,
-            "php-http/discovery": true
+            "php-http/discovery": true,
+            "wikimedia/composer-merge-plugin": true
         }
     },
     "minimum-stability": "stable",
