--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.9",
         "maatwebsite/excel": "^1.1",
-        "nwidart/laravel-modules": "^12.0",
+        "nwidart/laravel-modules": "*",
         "spatie/browsershot": "^5.0",
         "spatie/laravel-pdf": "^1.6",
         "stancl/tenancy": "^3.9",
